# Polynomial-Regression

./: .gitignore  CMakeLists.txt
src/: common.hpp  main.cpp  main.hpp
src/kernel/: common.hpp
src/kernel/coms/inc/: abstracts.hpp  coms.hpp
src/kernel/coms/src/: coms.cpp
src/kernel/exceptions/inc/: exceptions.hpp
src/kernel/regressions/inc/: regressions.hpp
src/kernel/regressions/src/: regressions.cpp
